integration/fixtures/k8s-session-persistence/gateway-traefikservice-route-sticky/httproute-cookie.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gw-tsr-cookie
  namespace: default
spec:
  parentRefs:
    - name: my-gateway
  hostnames:
    - whoami-tsr-cookie.localhost
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: tsr-multi-cookie
          kind: TraefikService
          group: traefik.io
          port: 80
      sessionPersistence:
        sessionName: route-cookie
        type: Cookie
        cookieConfig:
          lifetimeType: Session
