integration/fixtures/k8s-session-persistence/gateway-traefikservice-route-sticky/service-a-header.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: whoami-tsr-a-header
  namespace: default
spec:
  selector:
    app: whoami-tsr-a
  ports:
    - name: web
      port: 80
      targetPort: 80
