integration/fixtures/k8s-session-persistence/gateway-traefikservice-route-sticky/traefikservice-cookie.yaml
---
apiVersion: traefik.io/v1alpha1
kind: TraefikService
metadata:
  name: tsr-multi-cookie
  namespace: default
spec:
  weighted:
    sticky:
      cookie:
        name: tsr-wrr-cookie
    services:
      - name: whoami-tsr-a-cookie
        port: 80
        sticky:
          cookie:
            name: tsr-svc-cookie
      - name: whoami-tsr-b-cookie
        port: 80
        sticky:
          cookie:
            name: tsr-svc-cookie
